chore:2025024运行版本，调整配置文件和docker-compose。

--- a/docker/.env
+++ b/docker/.env
@@ -15,14 +15,14 @@ COMPOSE_PROFILES=${DOC_ENGINE}
 STACK_VERSION=8.11.3
 
 # The hostname where the Elasticsearch service is exposed
-ES_HOST=es01
+ES_HOST=12.24.11.111
 
 # The port used to expose the Elasticsearch service to the host machine, 
 # allowing EXTERNAL access to the service running inside the Docker container.
-ES_PORT=1200
+ES_PORT=9200
 
 # The password for Elasticsearch. 
-ELASTIC_PASSWORD=infini_rag_flow
+ELASTIC_PASSWORD=20211224gzff
 
 # The port used to expose the Kibana service to the host machine, 
 # allowing EXTERNAL access to the service running inside the Docker container.
@@ -43,17 +43,17 @@ INFINITY_HTTP_PORT=23820
 INFINITY_PSQL_PORT=5432
 
 # The password for MySQL. 
-MYSQL_PASSWORD=infini_rag_flow
+MYSQL_PASSWORD=Tad&8254D.
 # The hostname where the MySQL service is exposed
-MYSQL_HOST=mysql
+MYSQL_HOST=12.24.11.111
 # The database of the MySQL service to use
 MYSQL_DBNAME=rag_flow
 # The port used to expose the MySQL service to the host machine, 
 # allowing EXTERNAL access to the MySQL database running inside the Docker container. 
-MYSQL_PORT=5455
+MYSQL_PORT=3306
 
 # The hostname where the MinIO service is exposed
-MINIO_HOST=minio
+MINIO_HOST=12.24.11.111
 # The port used to expose the MinIO console interface to the host machine, 
 # allowing EXTERNAL access to the web-based console running inside the Docker container. 
 MINIO_CONSOLE_PORT=9001
@@ -62,29 +62,29 @@ MINIO_CONSOLE_PORT=9001
 MINIO_PORT=9000
 # The username for MinIO. 
 # When updated, you must revise the `minio.user` entry in service_conf.yaml accordingly.
-MINIO_USER=rag_flow
+MINIO_USER=gziomer
 # The password for MinIO. 
 # When updated, you must revise the `minio.password` entry in service_conf.yaml accordingly.
-MINIO_PASSWORD=infini_rag_flow
+MINIO_PASSWORD='Gruy2/85fi.9#dpm'
 
 # The hostname where the Redis service is exposed
-REDIS_HOST=redis
+REDIS_HOST=12.24.11.111
 # The port used to expose the Redis service to the host machine, 
 # allowing EXTERNAL access to the Redis service running inside the Docker container.
 REDIS_PORT=6379
 # The password for Redis.
-REDIS_PASSWORD=infini_rag_flow
+REDIS_PASSWORD=20250223gzff
 
 # The port used to expose RAGFlow's HTTP API service to the host machine, 
 # allowing EXTERNAL access to the service running inside the Docker container.
-SVR_HTTP_PORT=9380
+SVR_HTTP_PORT=19380
 
 # The RAGFlow Docker image to download.
 # Defaults to the v0.16.0-slim edition, which is the RAGFlow Docker image without embedding models.
-RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0-slim
+# RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0-slim
 #
 # To download the RAGFlow Docker image with embedding models, uncomment the following line instead:
-# RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0
+RAGFLOW_IMAGE=infiniflow/ragflow:v0.16.0
 # 
 # The Docker image of the v0.16.0 edition includes:
 # - Built-in embedding models:
