--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,17 @@
-include:
-  - ./docker-compose-base.yml
+# include:
+#   - ./docker-compose-base.yml
 
 services:
   ragflow:
-    depends_on:
-      mysql:
-        condition: service_healthy
+    # depends_on:
+    #   mysql:
+    #     condition: service_healthy
     image: ${RAGFLOW_IMAGE}
-    container_name: ragflow-server
+    container_name: RAGFlow
     ports:
       - ${SVR_HTTP_PORT}:9380
-      - 80:80
-      - 443:443
+      - 19381:80
+      - 19382:443
     volumes:
       - ./ragflow-logs:/ragflow/logs
       - ./nginx/ragflow.conf:/etc/nginx/conf.d/ragflow.conf
@@ -20,15 +20,15 @@ services:
     env_file: .env
     environment:
       - TZ=${TIMEZONE}
-      - HF_ENDPOINT=${HF_ENDPOINT}
-      - MACOS=${MACOS}
-    networks:
-      - ragflow
-    restart: on-failure
+      # - HF_ENDPOINT=${HF_ENDPOINT}
+      # - MACOS=${MACOS}
+    # networks:
+    #   - ragflow
+    # restart: on-failure
     # https://docs.docker.com/engine/daemon/prometheus/#create-a-prometheus-configuration
-    # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    # # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
+    # extra_hosts:
+    #   - "host.docker.internal:host-gateway"
   # executor:
   #   depends_on:
   #     mysql:
