--- a/docker/docker-compose-gpu.yml
+++ b/docker/docker-compose-gpu.yml
@@ -1,19 +1,19 @@
 # The RAGFlow team do not actively maintain docker-compose-gpu.yml, so use them at your own risk. 
 # Pull requests to improve it are welcome.
-include:
-  - ./docker-compose-base.yml
+# include:
+#   - ./docker-compose-base.yml
 
 services:
   ragflow:
-    depends_on:
-      mysql:
-        condition: service_healthy
+    # depends_on:
+    #   mysql:
+    #     condition: service_healthy
     image: ${RAGFLOW_IMAGE}
-    container_name: ragflow-server
+    container_name: RAGFlow
     ports:
       - ${SVR_HTTP_PORT}:9380
-      - 80:80
-      - 443:443
+      - 19381:80
+      - 19382:443
     volumes:
       - ./ragflow-logs:/ragflow/logs
       - ./nginx/ragflow.conf:/etc/nginx/conf.d/ragflow.conf
@@ -22,15 +22,15 @@ services:
     env_file: .env
     environment:
       - TZ=${TIMEZONE}
-      - HF_ENDPOINT=${HF_ENDPOINT}
-      - MACOS=${MACOS}
-    networks:
-      - ragflow
-    restart: on-failure
+      # - HF_ENDPOINT=${HF_ENDPOINT}
+      # - MACOS=${MACOS}
+    # networks:
+    #   - ragflow
+    # restart: on-failure
     # https://docs.docker.com/engine/daemon/prometheus/#create-a-prometheus-configuration
     # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    # extra_hosts:
+    #   - "host.docker.internal:host-gateway"
     deploy:
       resources:
         reservations:
