--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,8 +18,13 @@ services:
       - ./nginx/proxy.conf:/etc/nginx/proxy.conf
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     env_file: .env
+    privileged: true
+    pids_limit: 2048
     environment:
       - TZ=${TIMEZONE}
+      - HOST_OS=Unraid
+      - HOST_HOSTNAME=GZGG-Tower
+      - HOST_CONTAINERNAME=RAGFlow
       # - HF_ENDPOINT=${HF_ENDPOINT}
       # - MACOS=${MACOS}
     # networks:
@@ -51,3 +56,7 @@ services:
   #   # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
   #   extra_hosts:
   #     - "host.docker.internal:host-gateway"
+    labels:
+      - net.unraid.docker.managed=dockerman
+      - net.unraid.docker.webui=http://[IP]:[PORT:19381]
+      - net.unraid.docker.icon=https://github.com/gzers/HD-Icons/blob/gzers-new/border-radius/RAGFlow_A.png?raw=true
