--- a/docker/docker-compose-gpu.yml
+++ b/docker/docker-compose-gpu.yml
@@ -9,16 +9,16 @@ services:
     #   mysql:
     #     condition: service_healthy
     image: ${RAGFLOW_IMAGE}
-    container_name: RAGFlow
+    container_name: RAG-Flow
     ports:
       - ${SVR_HTTP_PORT}:9380
-      - 19381:80
-      - 19382:443
+      - 80:80
+      - 443:443
     volumes:
-      - ./ragflow-logs:/ragflow/logs
-      - ./nginx/ragflow.conf:/etc/nginx/conf.d/ragflow.conf
-      - ./nginx/proxy.conf:/etc/nginx/proxy.conf
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - /mnt/user/GZGG_Computed/rag-flow-service/rag-flow/ragflow-logs:/ragflow/logs
+      - /mnt/user/GZGG_Computed/rag-flow-service/source/docker/nginx/ragflow.conf:/etc/nginx/conf.d/ragflow.conf
+      - /mnt/user/GZGG_Computed/rag-flow-service/source/docker/nginx/proxy.conf:/etc/nginx/proxy.conf
+      - /mnt/user/GZGG_Computed/rag-flow-service/source/docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     env_file: .env
     privileged: true
     pids_limit: 2048
@@ -31,6 +31,9 @@ services:
       # - MACOS=${MACOS}
     # networks:
     #   - ragflow
+    networks:
+      br0:
+        ipv4_address: 12.24.111.11
     # restart: on-failure
     # https://docs.docker.com/engine/daemon/prometheus/#create-a-prometheus-configuration
     # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
@@ -38,7 +41,7 @@ services:
     #   - "host.docker.internal:host-gateway"
     labels:
       - net.unraid.docker.managed=dockerman
-      - net.unraid.docker.webui=http://[IP]:[PORT:19381]
+      - net.unraid.docker.webui=http://[IP]:[PORT:80]
       - net.unraid.docker.icon=https://github.com/gzers/HD-Icons/blob/gzers-new/border-radius/RAGFlow_A.png?raw=true
     deploy:
       resources:
@@ -47,3 +50,7 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+
+networks:
+  br0:
+    external: true
