--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,39 +1,34 @@
-# include:
-#   - ./docker-compose-base.yml
+include:
+  - ./docker-compose-base.yml
 
 services:
   ragflow:
-    # depends_on:
-    #   mysql:
-    #     condition: service_healthy
+    depends_on:
+      mysql:
+        condition: service_healthy
     image: ${RAGFLOW_IMAGE}
-    container_name: RAGFlow
+    container_name: ragflow-server
     ports:
       - ${SVR_HTTP_PORT}:9380
-      - 19381:80
-      - 19382:443
+      - 80:80
+      - 443:443
     volumes:
       - ./ragflow-logs:/ragflow/logs
       - ./nginx/ragflow.conf:/etc/nginx/conf.d/ragflow.conf
       - ./nginx/proxy.conf:/etc/nginx/proxy.conf
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     env_file: .env
-    privileged: true
-    pids_limit: 2048
     environment:
       - TZ=${TIMEZONE}
-      - HOST_OS=Unraid
-      - HOST_HOSTNAME=GZGG-Tower
-      - HOST_CONTAINERNAME=RAGFlow
-      # - HF_ENDPOINT=${HF_ENDPOINT}
-      # - MACOS=${MACOS}
-    # networks:
-    #   - ragflow
-    # restart: on-failure
+      - HF_ENDPOINT=${HF_ENDPOINT}
+      - MACOS=${MACOS}
+    networks:
+      - ragflow
+    restart: on-failure
     # https://docs.docker.com/engine/daemon/prometheus/#create-a-prometheus-configuration
-    # # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
-    # extra_hosts:
-    #   - "host.docker.internal:host-gateway"
+    # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   # executor:
   #   depends_on:
   #     mysql:
@@ -56,7 +51,3 @@ services:
   #   # If you're using Docker Desktop, the --add-host flag is optional. This flag makes sure that the host's internal IP gets exposed to the Prometheus container.
   #   extra_hosts:
   #     - "host.docker.internal:host-gateway"
-    labels:
-      - net.unraid.docker.managed=dockerman
-      - net.unraid.docker.webui=http://[IP]:[PORT:19381]
-      - net.unraid.docker.icon=https://github.com/gzers/HD-Icons/blob/gzers-new/border-radius/RAGFlow_A.png?raw=true
